vcl/inc/qt5/QtFrame.hxx
@@ -128,6 +128,7 @@ class VCLPLUG_QT_PUBLIC QtFrame : public QObject, public SalFrame
     bool isWindow() const;
     QWindow* windowHandle() const;
     QScreen* screen() const;
+    static bool isUsingDarkColorScheme();
     bool isMinimized() const;
     bool isMaximized() const;
     void SetWindowStateImpl(Qt::WindowStates eState);
